--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -661,6 +661,14 @@ html::-webkit-scrollbar-track {
 
 @font-face {
   font-family: 'Poppins';
+  src: url("../fonts/Poppins-Light.woff2") format("woff2"), url("../fonts/Poppins-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
   src: url("../fonts/Poppins-Medium.woff2") format("woff2"), url("../fonts/Poppins-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
