--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -720,6 +720,15 @@ html::-webkit-scrollbar-track {
 // FONTS
 @font-face {
   font-family: 'Poppins';
+  src: url('../fonts/Poppins-Light.woff2') format('woff2'),
+      url('../fonts/Poppins-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Poppins';
   src: url('../fonts/Poppins-Medium.woff2') format('woff2'),
     url('../fonts/Poppins-Medium.woff') format('woff');
   font-weight: 500;
